<feat>: Add Draw and Draw Result logic
Porque se hace este cambio: Se hace el crud básico de las principales entidades de la aplicación.